--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>iconic_hardware</title></title>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 
