--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ p {
   text-align: center;
   padding: 10px;
   margin: auto;
-  width: 75vw;
-  max-width: 600px;
+  width: 90vw;
+  max-width: 1000px;
  }
 
 .heading {
@@ -42,8 +42,8 @@ p {
   background-color: #ffb7cf;
   text-align: center;
   margin: auto;
-  width: 75vw;
-  max-width: 600px;
+  width: 90vw;
+  padding: 10px;
   box-shadow: 1px 1px 5px #ff5a91 inset;
   margin-bottom: 10px;
  }
