--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ p {
   <img src="M57 Firing Device web.png" alt="M57 firing device" width="100%" loading="eager">
 </div>
 
+<div class="title">
 <p>All designs © iconic_hardware 2023<br>Images by Will Steacy.</p>
+</div>
 
 </body>
 </html>
