--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ p {
   margin: 6vw;
 }
 
+.spacerLong {
+  margin: 8vw;
+}
+
 .title {
   background-color: #ffb7cf;
   text-align: center;
@@ -81,8 +85,14 @@ p {
   <img src="M57 Firing Device web.png" alt="M57 firing device" width="100%" loading="eager">
 </div>
 
+<div class="spacerLong">
+</div>
+
 <div class="title">
 <p>All designs © iconic_hardware 2023<br>Images by Will Steacy.</p>
+</div>
+
+<div class="spacer">
 </div>
 
 </body>
