--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ p {
 <body style="background-color:#ffb7cf">
 
 <div class="title">
-  <img src="iconic_hardware_logo_spin.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
+  <video autoplay playsinline muted loop width="90vw" max-width="1000px">
+  <source src="iconic_hardware_logo.mp4" type="video/mp4">
+  <!--<img src="iconic_hardware_logo_spin.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">-->
 </div>
 
 <div class="heading">
