--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@ p {
   text-align: center;
   padding: 10px;
   margin: auto;
-  width: 90vw;
-  max-width: 1000px;
+  width: 75vw;
+  max-width: 600px;
  }
 
 .heading {
   line-height: 0px;
   text-align: center;
   margin-bottom: 10px;
+  width: 50vw;
+  max-width: 400px;
 }
 
 .picDiv {
@@ -59,9 +61,7 @@ p {
 <body style="background-color:#ffb7cf">
 
 <div class="title">
-  <video autoplay playsinline muted loop width="90vw" max-width="1000px">
-  <source src="iconic_hardware_logo.mp4" type="video/mp4">
-  <!--<img src="iconic_hardware_logo_spin.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">-->
+  <img src="iconic_hardware_logo_spin.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
 </div>
 
 <div class="heading">
@@ -90,9 +90,7 @@ p {
 <div class="spacerLong">
 </div>
 
-<div class="title">
-<p>All designs © iconic_hardware 2023<br>Images by Will Steacy.</p>
-</div>
+<p style="text-align: center"> All designs &copy; iconic_hardware <script>document.write(new Date().getFullYear())</script><br> Images by Will Steacy</p>
 
 <div class="spacer">
 </div>
