--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 h1 {
   font-family: courier, sans serif;
-  font-size: 4vw;
+  font-size: 3.5vw;
   color: white;
   text-shadow: 0px 0px 6px #ff5a91;
 }
@@ -33,15 +33,14 @@ p {
   padding: 10px;
   margin: auto;
   width: 75vw;
-  max-width: 600px;
+  max-width: 750px;
  }
 
 .heading {
   line-height: 0px;
   text-align: center;
+  margin: auto;
   margin-bottom: 10px;
-  width: 50vw;
-  max-width: 400px;
 }
 
 .picDiv {
@@ -61,7 +60,7 @@ p {
 <body style="background-color:#ffb7cf">
 
 <div class="title">
-  <img src="iconic_hardware_logo_spin.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
+  <img src="iconic_hardware_logo_750.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
 </div>
 
 <div class="heading">
