--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@ p {
 <div class="title">
   <img src="iconic_hardware_logo_750.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
 </div>
+<div class="title">
+  <img src="ic3.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
+</div>
+<div class="title">
+  <img src="ic4.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
+</div>
 
 <div class="heading">
   <h1>BUSHMASTER XM15-E2S</h1>
