--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ p {
 <body style="background-color:#ffb7cf">
 
 <div class="title">
-  <img src="ic3.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
+  <img src="iconic_hardware_logo.gif" alt="iconic hardware spinning logo" width="100%" loading="eager">
 </div>
 
 <div class="heading">
