--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {
   margin: auto;
   width: 90vw;
   padding: 10px;
-  box-shadow: 0px 1px 6px #ff5a91 inset;
+  box-shadow: 0px 0px 6px #ff5a91 inset;
   margin-bottom: 10px;
  }
 
@@ -89,7 +89,7 @@ p {
 <div class="spacerLong">
 </div>
 
-<p style="text-align: center"> All designs &copy; iconic_hardware <script>document.write(new Date().getFullYear())</script><br> Images by Will Steacy</p>
+<p style="text-align: center"> All designs &copy; iconic_hardware <script>document.write(new Date().getFullYear())</script></p>
 
 <div class="spacer">
 </div>
