--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 h1 {
   font-family: courier, sans serif;
-  font-size: 3.5vw;
+  font-size: clamp(20px, 3.5vw, 50px);
   color: white;
   text-shadow: 0px 0px 6px #ff5a91;
 }
@@ -32,8 +32,7 @@ p {
   text-align: center;
   padding: 10px;
   margin: auto;
-  width: 75vw;
-  max-width: 750px;
+  width: clamp(200px, 75vw, 750px);
  }
 
 .heading {
@@ -41,13 +40,14 @@ p {
   text-align: center;
   margin: auto;
   margin-bottom: 10px;
+  width: clamp(45ch, 50%, 75ch);
 }
 
 .picDiv {
   background-color: #ffb7cf;
   text-align: center;
   margin: auto;
-  width: 90vw;
+  width: clamp(45ch, 90vw, 1000px);
   padding: 10px;
   box-shadow: 0px 0px 6px #ff5a91 inset;
   margin-bottom: 10px;
@@ -68,11 +68,11 @@ p {
 </div>
 
 <div class="picDiv">
-  <img src="bushmaster 01.jpg" alt="bushmaster XM15-E2S right side" width="100%" loading="eager">
+  <a href="/bushmaster XM15-E2S left side.jpg"><img src="bushmaster thumb 01.jpg" alt="bushmaster XM15-E2S left side" width="100%" loading="eager"></a>
 </div>
 
 <div class="picDiv">
-  <img src="bushmaster 02.jpg" alt="bushmaster XM15-E2S left side" width="100%" loading="eager">
+  <a href="/bushmaster XM15-E2S right side.jpg"><img src="bushmaster thumb 02.jpg" alt="bushmaster XM15-E2S right side" width="100%" loading="eager"></a>
 </div>
 
 <div class="spacer">
@@ -83,7 +83,7 @@ p {
 </div>
 
 <div class="picDiv">
-  <img src="M57 Firing Device web.png" alt="M57 firing device" width="100%" loading="eager">
+  <a href="/M57 Firing device.jpg"><img src="M57 Firing Device thumb.png" alt="M57 firing device" width="100%" loading="eager"></a>
 </div>
 
 <div class="spacerLong">
