--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ p {
 </div>
 
 <div class="picDiv">
-  <a href="/M57 Firing device.png"><img src="M57 Firing Device thumb.png" alt="M57 firing device" width="100%" loading="eager"></a>
+  <a href="/M57 Firing Device.png"><img src="M57 Firing Device thumb.png" alt="M57 firing device" width="100%" loading="eager"></a>
 </div>
 
 <div class="spacerLong">
