--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ h1 {
 
 p {
   font-family: courier;
-  font-size: 2vw;
+  font-size: clamp(2wv, 2vw, 30px);
+  text-align: center;
   color: #404040
   }
   
@@ -89,7 +90,8 @@ p {
 <div class="spacerLong">
 </div>
 
-<p style="text-align: center"> All designs &copy; iconic_hardware <script>document.write(new Date().getFullYear())</script></p>
+<p>All designs &copy; iconic_hardware <script>document.write(new Date().getFullYear())</script></p>
+<p>Click on a picture to see it in high-res!</p>
 
 <div class="spacer">
 </div>
