--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ p {
   background-color: #ffb7cf;
   text-align: center;
   margin: auto;
-  width: clamp(45ch, 90vw, 1000px);
+  width: clamp(90vw, 90vw, 1000px);
   padding: 10px;
   box-shadow: 0px 0px 6px #ff5a91 inset;
   margin-bottom: 10px;
