--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@ p {
   text-align: center;
   margin: auto;
   margin-bottom: 10px;
-  width: clamp(45ch, 50%, 75ch);
+  width: clamp(85vw, 50%, 75ch);
+<!--min used to be 45ch-->
 }
 
 .picDiv {
   background-color: #ffb7cf;
   text-align: center;
   margin: auto;
-  width: clamp(90vw, 90vw, 1000px);
+  width: clamp(85vw, 90vw, 1000px);
   padding: 10px;
   box-shadow: 0px 0px 6px #ff5a91 inset;
   margin-bottom: 10px;
