--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p {
   text-align: center;
   margin: auto;
   margin-bottom: 10px;
-  width: clamp(85vw, 50%, 75ch);
+  width: clamp(200px, 50%, 75ch);
 <!--min used to be 45ch-->
 }
 
@@ -49,7 +49,7 @@ p {
   background-color: #ffb7cf;
   text-align: center;
   margin: auto;
-  width: clamp(85vw, 90vw, 1000px);
+  width: clamp(200px, 90vw, 1000px);
   padding: 10px;
   box-shadow: 0px 0px 6px #ff5a91 inset;
   margin-bottom: 10px;
