--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ p {
   text-align: center;
   margin: auto;
   margin-bottom: 10px;
-  width: clamp(200px, 50%, 75ch);
-<!--min used to be 45ch-->
+  <!--width: clamp(200px, 50%, 75ch);-->
+  <!--min used to be 45ch-->
 }
 
 .picDiv {
